--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ osx_image: xcode10.2
 xcode_project: TSupportLibrary.xcodeproj
 xcode_scheme: TSupportLibrary
 xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
+after_success:
+- bash <(curl -s https://codecov.io/bash)
